<resources>
    <string name="app_name">Steam</string>
    <string name="account_email">ACCOUNT EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="password_hint">***********</string>
    <string name="email_hint">email@example.com</string>
    <string name="forgot_your_password">FORGOT YOUR PASSWORD?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="remember_my_password">REMEMBER MY PASSWORD</string>
    <string name="username">Username</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email">EMAIL</string>
</resources>