<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical"
                android:background="@drawable/login_bg">

    <LinearLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:contentDescription="Logo"
            android:src="@mipmap/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/account_email"
            android:textColor="#EEE"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:autofillHints=""
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColorHint="#CCC"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/password"
            android:textColor="#EEE"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:autofillHints=""
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#CCC"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/remember_my_password"
            android:textColor="@color/colorAccent"
            android:textSize="6pt"
            app:buttonTint="#FFFFFF"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/sign_in"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/btn_register_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/create_account"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_your_password"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:background="@drawable/black_alpha_bg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

  </RelativeLayout>