<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/login_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".LoginActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/first_name"
                android:textSize="16sp"
                android:textColor="#EEE"/>

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:autofillHints=""
                android:background="@drawable/login_edittext_bg"
                android:inputType="textCapWords"
                android:textAlignment="center"
                android:textColorHint="#CCC"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:text="@string/last_name"
                android:textSize="16sp"
                android:textColor="#EEE"/>

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:autofillHints=""
                android:background="@drawable/login_edittext_bg"
                android:inputType="textCapWords"
                android:textAlignment="center"
                android:textColorHint="#CCC"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:text="@string/email"
                android:textSize="16sp"
                android:textColor="#EEE"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:autofillHints=""
                android:background="@drawable/login_edittext_bg"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColorHint="#CCC"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:text="@string/password"
                android:textSize="16sp"
                android:textColor="#EEE"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="50dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:autofillHints=""
                android:background="@drawable/login_edittext_bg"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="#CCC"/>

            <Button
                android:id="@+id/btn_create_account"
                android:layout_gravity="center"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/login_button_bg"
                android:text="@string/create_account"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:background="@drawable/black_alpha_bg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>